--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -1,7 +1,31 @@
 {% extends "auctions/layout.html" %}
 
+{% load %}
+
 {% block body %}
     <h2>Active Listings</h2>
-
-    TODO
+    {% if listings|length > 0 %}
+        {% for listing in listings %}
+            <div class="d-flex p-2">
+            <div class="d-flex justify-content-center align-items-center flex-column mb-2 p-2" style="background-color: purple; width:300px; height:300px;">
+                {% if listing.image %}
+                <img src="{{ listing.image.url }}">
+                {% else %}
+                No image exists
+                {% endif %}
+            </div>
+            <div class="d-flex flex-column mb-2 p-2">
+                <div class="p-2"><b>{{ listing.title }}</b></div>
+                <div class="p-2"><b>Price:</b> ${{ listing.starting_bid }}</div>
+                <div class="p-2"> <b>Description:</b> {{ listing.description }}</div>
+                <div class="p-2"> <b>Listed on:</b> {{ listing.date }}</div>
+                <div class="p-2"> <b>Listed by:</b> {{ listing.owner }}</div>
+            </div>
+        </div>
+        <h3><a href="{% url 'listing' listing.listing_id %}">Click For More Information</a></h3>
+        <hr>
+        {% endfor %}
+    {% else %}
+        <h3>No Listings Available!</h3>
+    {% endif %}
 {% endblock %}
