--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -1,3 +1,19 @@
 body {
     padding: 10px;
 }
+
+@media (min-width: 750px) {
+    .form-control {
+        width: 600px;
+    }
+}
+
+@media (max-width: 749px) {
+    .form-control {
+        width: 80%;
+    }
+}
+
+.input-group{
+    background-color: blue;
+}
