--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -5,8 +5,14 @@
 {% block body %}
     <h1>Create Listing</h1>
         <form action="{% url 'create' %}" method="post">
-            {% csrf_token %}
-            {{ form }}
-        <input type="submit" value="List">
-    </form>
+                {% csrf_token %}
+                {% for field in form %}
+                        <div class="mb-3">
+                            <label class="form-label"> {{ field.label }} </label>
+
+                                        {{ field }}
+                        </div>
+                {% endfor %}
+            <input class="btn btn-primary" type="submit" value="List">
+        </form>
 {% endblock %}
