--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -3,17 +3,13 @@ body {
 }
 
 @media (min-width: 750px) {
-    .form-control {
+    .form-control, .input-group {
         width: 600px;
     }
 }
 
 @media (max-width: 749px) {
-    .form-control {
+    .form-control, .input-group {
         width: 80%;
     }
-}
-
-.input-group{
-    background-color: blue;
 }
