finished styling the /create page

--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -7,11 +7,19 @@
         <form action="{% url 'create' %}" method="post">
                 {% csrf_token %}
                 {% for field in form %}
-                        <div class="mb-3">
-                            <label class="form-label"> {{ field.label }} </label>
+                        <label class="form-label"> {{ field.label }} </label>   
 
-                                        {{ field }}
+                        {% if field == form.starting_bid %}
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">$</span>
+                            {{field}}
                         </div>
+
+                        {% else %}
+                        <div class="mb-3">
+                            {{ field }}
+                        </div>
+                        {% endif %}
                 {% endfor %}
             <input class="btn btn-primary" type="submit" value="List">
         </form>
