--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -3,13 +3,14 @@ body {
 }
 
 @media (min-width: 750px) {
-    .form-control, .input-group {
+    .form-control, .input-group, .alert {
         width: 600px;
     }
 }
 
 @media (max-width: 749px) {
-    .form-control, .input-group {
+    .form-control, .input-group, .alert {
         width: 80%;
     }
 }
+
