--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -14,3 +14,9 @@ body {
     }
 }
 
+#img-div {
+    width: 300px;
+    height: 300px;
+    box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
+    border: 1px solid #dadce0;
+}
