--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -5,7 +5,7 @@
     {% if listings|length > 0 %}
         {% for listing in listings %}
             <div class="d-flex p-2">
-            <div class="d-flex justify-content-center align-items-center flex-column mb-2 p-2" style="background-color: purple; width:300px; height:300px;">
+            <div id="img-div" class="d-flex justify-content-center align-items-center flex-column mb-2 p-2">
                 {% if listing.image %}
                 <img src="{{ listing.image.url }}">
                 {% else %}
@@ -13,14 +13,13 @@
                 {% endif %}
             </div>
             <div class="d-flex flex-column mb-2 p-2">
-                <div class="p-2"><b>{{ listing.title }}</b></div>
+                <div class="p-2"><b>Game:</b> {{ listing.title }}</div>
                 <div class="p-2"><b>Price:</b> ${{ listing.starting_bid }}</div>
                 <div class="p-2"> <b>Description:</b> {{ listing.description }}</div>
-                <div class="p-2"> <b>Listed on:</b> {{ listing.date }}</div>
-                <div class="p-2"> <b>Listed by:</b> {{ listing.owner }}</div>
+                <div class="p-2"> <b>Genre(s):</b> {{ listing.genre }}</div>
+                <div class="p-2"><a href="{% url 'listing' listing.listing_id %}">Click For More Information</a></div>
             </div>
         </div>
-        <h3><a href="{% url 'listing' listing.listing_id %}">Click For More Information</a></h3>
         <hr>
         {% endfor %}
     {% else %}
