--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="d-flex p-2">
-    <div class="d-flex flex-column mb-2 p-2" style="background-color: blue; width:300px; height:300px;">
+    <div id="img-div" class="d-flex flex-column mb-2 p-2">
         {% if listing.image %}
         <img src="{{ listing.image.url }}">
         {% else %}
@@ -14,10 +14,11 @@
         {% endif %}
     </div>
     <div class="d-flex flex-column mb-2 p-2">
-        <div class="p-2"><b>{{ listing.title }}</b></div>
+        <div class="p-2"><b>Game:</b> {{ listing.title }}</div>
         <div class="p-2"><b>Price:</b> ${{ listing.starting_bid }}</div>
-        <div class="p-2"> {{ listing.description }}</div>
+        <div class="p-2"> <b>Description:</b> {{ listing.description }}</div>
         <div class="p-2"> <b>Listed on:</b> {{ listing.date }}</div>
+        <div class="p-2"> <b>Genre(s):</b> {{ listing.genre }}</div>
         <div class="p-2"> <b>Listed by:</b> {{ listing.owner }}</div>
     </div>
 </div>
