--- a/auctions/templates/auctions/bid.html
+++ b/auctions/templates/auctions/bid.html
@@ -1,11 +1,14 @@
-{% include "auctions/listing.html" with listing=item %}
-
-{% block title %} Bid {% endblock %}
+{% include "auctions/listing.html" with listing=item message=message %}
 
 {% block body %}
+    {% include "auctions/message.html" %}
+    <div class="d-flex p-2">
+        <div class="d-flex flex-column mb-2 p-2">
+        hi
+        </div>
+    </div>
     <form action="{% url 'bid' item.listing_id %}" method="post">
         {% csrf_token %}
-
             <div class="mb-2">
                 {{ bid_form }}
                 <input type="submit" value="Bid">
