now displays instructions for choosing genres

--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -7,7 +7,12 @@
         <form action="{% url 'create' %}" method="post">
                 {% csrf_token %}
                     {% for field in form %}
-                        <label class="form-label"> <b>{{ field.label }} </b> </label> 
+                        {% if field == form.genres %}
+                            <label class="form-label"> <strong>{{ field.label }}</strong></label> <span style="font-size: 12px; color:#333333;"> Hold CMD+⌘ to select multiple or remove selection </span>
+                        {% else %}
+                            <label class="form-label"> <strong>{{ field.label }} </strong> </label> 
+                        {% endif %}
+
                         {% if field.errors %}
                             <div class="alert alert-warning" role="alert"> {{ field.errors|striptags }}</div>
                         {% endif %}
