--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -1,7 +1,8 @@
-{% extends "auctions/layout.html" %}
+{% extends "auctions/layout.html"%}
 
 {% block body %}
     <h2>Active Listings</h2>
+    {% include "auctions/message.html" %}
     {% if listings|length > 0 %}
         {% for listing in listings %}
             <div class="d-flex p-2">
