--- a/auctions/templates/auctions/message.html
+++ b/auctions/templates/auctions/message.html
@@ -1,7 +1,11 @@
 {% if messages %}
 <ul class="messages">
     {% for message in messages %}
-    <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% if message.tags == 'error' %}
+        <div class="alert alert-danger" role="alert">{{ message }}</div>
+        {% else %}
+        <div class="alert alert-success" role="alert">{{ message }}</div>
+        {% endif %}
     {% endfor %}
 </ul>
 {% endif %}
