--- a/auctions/templates/auctions/watchlist.html
+++ b/auctions/templates/auctions/watchlist.html
@@ -3,11 +3,12 @@
 {%block title %} Watchlist {% endblock%}
 
 {% block body %}
-    <h3>Watchlist</h3>
+    <h3 class="m-2">Watchlist</h3>
+    {% include "auctions/message.html" %}
     {% if watchlist|length > 0 %}
 
     {% for item in watchlist %}
-    <form action={% url 'watchlist' %} method="post">
+    <form class="m-2" action={% url 'watchlist' %} method="post">
         {% csrf_token %}
         <div class="d-flex p-2">
             <div id="img-div" class="d-flex justify-content-center align-items-center flex-column mb-2 p-2">
@@ -26,7 +27,6 @@
                 {% endfor %} </div>  
                 <div class="p-2"><a href="{% url 'listing' item.listing_id %}">Information about Listing</a></div>
                 <input name="listing_id" type="hidden" value={{ item.listing_id }}>
-                <div class="p-2"> <input class="btn btn-primary" type="submit" value="Remove from Watchlist"> </div>
             </div>
         </div>
         
@@ -36,7 +36,7 @@
     {% endfor %}
 
     {% else %}
-        <h3>No Listings On Your Watchlist</h3>
+        <h3 class="m-2">No Listings On Your Watchlist</h3>
     {% endif %}
 
 {% endblock %}
