--- a/auctions/templates/auctions/login.html
+++ b/auctions/templates/auctions/login.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h2>Login</h2>
+    <h2 class="m-2">Login</h2>
 
     {% if message %}
         <div>{{ message }}</div>
@@ -10,15 +10,15 @@
 
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
-        <div class="form-group">
+        <div class="form-group m-2">
             <input autofocus class="form-control" type="text" name="username" placeholder="Username">
         </div>
-        <div class="form-group">
+        <div class="form-group m-2">
             <input class="form-control" type="password" name="password" placeholder="Password">
         </div>
-        <input class="btn btn-primary" type="submit" value="Login">
+        <input class="btn btn-primary m-2" type="submit" value="Login">
     </form>
 
-    Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+    Don't have an account? <a href="{% url 'register' %}">Register here</a>
 
 {% endblock %}
