--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -19,7 +19,8 @@
                         
                         {% if field == form.starting_bid %}
                             <div class="input-group mb-3">
-                                <span class="input-group-text">$</span> {{ field }}
+                                <span class="input-group-text">$</span> 
+                                {{ field }}
                             </div>
                         {% else %}
                         <div class="mb-3">
