--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -1,7 +1,7 @@
 {% extends "auctions/layout.html"%}
 
 {% block body %}
-    <h2>Active Listings</h2>
+    <h2> {{ title }} </h2>
     {% include "auctions/message.html" %}
     {% if listings|length > 0 %}
         {% for listing in listings %}
@@ -15,10 +15,21 @@
             </div>
             <div class="d-flex flex-column mb-2 p-2">
                 <div class="p-2"><b>Game:</b> {{ listing.title }}</div>
-                <div class="p-2"><b>Starting Bid:</b> ${{ listing.starting_bid }}</div>
+                <div class="p-2"><b class="start-bid">Starting Bid:</b> ${{ listing.starting_bid }}</div>
+                <div class="p-2"><b class="high-bid">Highest Bid: </b>
+                    {% if listing.highest_bid is none %} 
+                    No biddings for this item yet!
+                    {% else %}
+                    ${{ listing.highest_bid.bid }}
+                    {% endif %}
+                </div>
                 <div class="p-2"> <b>Genre(s):</b> 
                 {% for genre in listing.genres.all %}
-                    <i>{{ genre }}</i>,&nbsp
+                    {% if listing.genres.all.last %}    
+                        {{ genre }}
+                    {% else %}
+                        {{ genre }},&nbsp
+                    {% endif %}
                 {% endfor %}
                 </div>  
                 <div class="p-2"><a href="{% url 'listing' listing.listing_id %}">Information about Listing</a></div>
