--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -1,39 +1,124 @@
-{% extends "auctions/layout.html" %}
-
-{% block title %}
-    Listing
-{% endblock %}
+{% include "auctions/layout.html" with message=message %}
 
 {% block body %}
+    {% include "auctions/message.html" %}
+        {% if listing.status is False and listing.highest_bid.bidder.id == user.id %}
+        <div class="alert alert-warning m-2" role="alert">
+            Congragulations! You won this bid.
+        </div>
+        {% elif listing.status is False %}
+        <div class="alert alert-warning m-2" role="alert">
+            This listing is now closed.
+        </div>
+        {% endif %}
+
 <div class="d-flex p-2">
-    <div id="img-div" class="d-flex flex-column mb-2 p-2">
-        {% if listing.image %}
-        <img src="{{ listing.image.url }}">
-        {% else %}
-        No image exists
+    <div class="d-flex flex-column mb-2 p-2">
+        <div id="img-div" class="d-flex justify-content-center align-items-center">
+            {% if listing.image %}
+            <img src="{{ listing.image.url }}">
+            {% else %}
+            No image exists
+            {% endif %}
+        </div>
+        
+        {% if user.is_authenticated and listing.status is True %}
+        <div class="d-flex justify-content-center align-items-center">
+                <form action="{% url 'listing' listing.listing_id %}" method="post">
+                    {% csrf_token %}
+                    <div class="mt-2">
+                        {% if listing.highest_bid.bidder.id is user.id %}
+                            {{ bids|length }} bid(s) so far. &nbsp<span style="color:green;">Your bid is the current highest</span>.
+                        {% else %}
+                            {{ bids|length }} bid(s) so far.
+                        {% endif %}
+                        </div>
+                    <div class="mt-2">
+                        <div class="input-group mt-2" style="width:300px;">
+                            <span class="input-group-text">$</span>
+                            {{ bid_form }}
+                        </div>
+                    </div>
+                    <input name="bid_amount" type="submit" class="btn btn-secondary mt-2 listing-btn" value="Place Bid">
+                </form>
+            </div>
+            <div class="d-flex justify-content-center align-items-center">
+                <form action="{% url 'listing' listing.listing_id %}" method="post">
+                    {% csrf_token %}
+                    <div class="mt-2">
+                        {% if listing not in watchlist %}
+                        <input name="add_watchlist" type="submit" class="btn btn-success listing-btn" value="Add to Watchlist">
+                        {% else %}
+                        <input name="remove_watchlist" type="submit" class="btn btn-danger listing-btn" value="Remove from Watchlist">
+                        {% endif %}
+                    </div>
+                    {% if user.id == listing.owner.id %}
+                    <div class="mt-3">
+                        <input name="close_listing" type="submit" class="btn btn-warning listing-btn" value="Close Listing">
+                    </div>
+                    {% endif %}
+                </form>
+        </div>
         {% endif %}
     </div>
-    <div class="d-flex flex-column mb-2 p-2">
-        <div class="p-2"><b>Game:</b> {{ listing.title }}</div>
-        <div class="p-2"><b>Starting Bid:</b> ${{ listing.starting_bid }}</div>
-        <div class="p-2"> <b>Description:</b> {{ listing.description }}</div>
-        <div class="p-2"> <b>Listed on:</b> {{ listing.date }}</div>
+
+<div class="d-flex p-2">
+    <div class="d-flex flex-column mb-2 p-2" style="width:450px;">
+        <div class="p-2"><strong style="font-size:27px;">{{ listing.title }}</strong></div>
+        <hr>
+        <div class="p-2" style="font-size:16px;"> {{ listing.description }} </div>
         <div class="p-2"> <b>Genre(s):</b> 
-        {% for genre in listing.genres.all %}
-
-                {{ genre }}&nbsp
-
-        {% endfor %}
+            {% for genre in listing.genres.all %}
+                {% if genre == listing.genres.all.last %}
+                    {{ genre }}
+                {% else %}
+                    {{ genre }},&nbsp
+                {% endif %}
+            {% endfor %}
         </div>
-        <div class="p-2"> <b>Listed by:</b> {{ listing.owner }}</div>
-        <form action="{% url 'listing' listing.listing_id %}" method="post">
-            {% csrf_token %}
-            {{ watchform }}
-            <div class="p-2">
-                <input class="btn btn-primary" type="submit" value="Add to Watchlist">
-                <a href="{% url 'bid' listing.listing_id%}" class="btn btn-primary">Bid for Item</a>
+        <div class="d-flex flex-row mb-3">
+            <div class="p-2"><b class="start-bid">Starting Bid:</b> ${{ listing.starting_bid }} </div>
+            <div class="p-2"><b class="high-bid">Highest Bid: </b>
+                {% if listing.highest_bid is none %} 
+                No biddings for this item yet!
+                {% else %}
+                ${{ listing.highest_bid.bid }}
+                {% endif %}
             </div>
+        </div>
+        <div class="p-2"> <b>Listed by:</b> {{ listing.owner }} </div>
+        <div class="p-2"> <b>Listed on:</b> {{ listing.date }} </div>
+    </div>
+</div>
+
+<div class="d-flex p-2">
+    <div class="d-flex flex-column mb-2 p-2 border border-dark h-75" style="width:600px;">
+        <h2 class="m-2">Comments</h2>
+        <hr>
+
+        <div class="border border-dark-subtle m-2 h-100 overflow-auto ">
+                {% if comments is not None %}
+                    {% for comment in comments %}
+                    <div class="card m-3">
+                        <div class="card-body">
+                            <span style="color:blue;">{{ comment.commenter }} &nbsp&nbsp&nbsp</span> {{ comment.comment }}
+                        </div>
+                    </div>
+                    {% endfor %}
+                {% endif %}
+        </div>
+
+        {% if user.is_authenticated %}
+        <form action="{% url 'listing' listing.listing_id %}" method="post">
+            <div class="d-flex flex-row comment-row justify-content-start align-items-center">
+                {% csrf_token %}
+                {{ comment_form }}
+                <input class="btn btn-dark m-2" name="comment_send" type="submit" value="Send">
+            </div>
+        {% endif %}
         </form>
     </div>
-</div>  
+</div>
+
+
 {% endblock %}
