--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -43,3 +43,9 @@ body {
     text-decoration: none;
     color: black;
 }
+
+.card:hover {
+    box-shadow: 0 1px 1px rgb(0 0 0 / 20%) !important;
+    outline: none !important;
+    border: 1px solid #dadce0 !important;
+}
