--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -86,8 +86,10 @@
                 {% endif %}
             </div>
         </div>
-        <div class="p-2"> <b>Listed by:</b> {{ listing.owner }} </div>
-        <div class="p-2"> <b>Listed on:</b> {{ listing.date }} </div>
+        <div class="d-flex flex-row mb-3">
+            <div class="p-2"> <b>Listed by:</b> {{ listing.owner }} </div>
+            <div class="p-2"> <b>Listed on:</b> {{ listing.date }} </div>
+        </div>
     </div>
 </div>
 
