--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -1,43 +1,51 @@
 {% extends "auctions/layout.html"%}
 
 {% block body %}
-    <h2> {{ title }} </h2>
     {% include "auctions/message.html" %}
+    <h2 class="m-2"> {{ title }} </h2>
     {% if listings|length > 0 %}
+    <div class="row row-cols-1 row-cols-md-4 g-4 m-2">
         {% for listing in listings %}
-            <div class="d-flex p-2">
-            <div id="img-div" class="d-flex justify-content-center align-items-center flex-column mb-2 p-2">
+        <div class="col">
+          <div class="card text-center d-flex align-items-center">
+            <div id="img-container" class="card-img-top d-flex justify-content-center align-items-center mt-2">
                 {% if listing.image %}
-                <img src="{{ listing.image.url }}">
+                    <img src="{{ listing.image.url }}" class="card-img-top" alt="...">
                 {% else %}
-                No image exists
+                    No Image Exists
                 {% endif %}
             </div>
-            <div class="d-flex flex-column mb-2 p-2">
-                <div class="p-2"><b>Game:</b> {{ listing.title }}</div>
-                <div class="p-2"><b class="start-bid">Starting Bid:</b> ${{ listing.starting_bid }}</div>
-                <div class="p-2"><b class="high-bid">Highest Bid: </b>
-                    {% if listing.highest_bid is none %} 
-                    No biddings for this item yet!
-                    {% else %}
-                    ${{ listing.highest_bid.bid }}
-                    {% endif %}
+            <div class="card-body w-100">
+              <h5 class="card-header text-center m-2"><b>{{ listing.title }}</b></h5>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item"><b style="font-size:14px;">Starting Bid:</b> <span class="start-bid">${{ listing.starting_bid }}</span></li>
+                <li class="list-group-item"><b style="font-size:14px;">Highest Bid:</b> 
+                    <span class="high-bid">
+                        {% if listing.highest_bid %}
+                            ${{ listing.highest_bid.bid }}
+                        {% else %}
+                            No biddings placed!
+                        {% endif %}
+                    </span></li>
+                <div class="card-footer">
+                        {% for genre in listing.genres.all %}
+                        <b style="font-size:14px;">
+                            {% if genre == listing.genres.all.last %}    
+                                {{ genre }}
+                            {% else %}
+                                {{ genre }},&nbsp
+                            {% endif %}
+                        </b>
+                        {% endfor %} 
                 </div>
-                <div class="p-2"> <b>Genre(s):</b> 
-                {% for genre in listing.genres.all %}
-                    {% if listing.genres.all.last %}    
-                        {{ genre }}
-                    {% else %}
-                        {{ genre }},&nbsp
-                    {% endif %}
-                {% endfor %}
-                </div>  
-                <div class="p-2"><a href="{% url 'listing' listing.listing_id %}">Information about Listing</a></div>
+              </ul>
+                <a class="stretched-link" href="{% url 'listing' listing.listing_id %}"></a>
             </div>
+          </div>
         </div>
-        <hr>
         {% endfor %}
+      </div>
     {% else %}
-        <h3>No Listings Available!</h3>
+        <h3 class="m-2">No Listings Available!</h3>
     {% endif %}
 {% endblock %}
