--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -24,7 +24,7 @@ body {
     }
 }
 
-#img-div {
+#img-container {
     width: 300px;
     height: 300px;
     box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
