--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -22,7 +22,8 @@
             {% endif %}
         </div>
         
-        {% if user.is_authenticated and listing.status is True %}
+        {% if user.is_authenticated %}
+        {% if listing.status is True %}
         <div class="d-flex justify-content-center align-items-center">
                 <form action="{% url 'listing' listing.listing_id %}" method="post">
                     {% csrf_token %}
@@ -42,6 +43,7 @@
                     <input name="bid_amount" type="submit" class="btn btn-secondary mt-2 listing-btn" value="Place Bid">
                 </form>
             </div>
+            {% endif %}
             <div class="d-flex justify-content-center align-items-center">
                 <form action="{% url 'listing' listing.listing_id %}" method="post">
                     {% csrf_token %}
@@ -52,7 +54,7 @@
                         <input name="remove_watchlist" type="submit" class="btn btn-danger listing-btn" value="Remove from Watchlist">
                         {% endif %}
                     </div>
-                    {% if user.id == listing.owner.id %}
+                    {% if user.id == listing.owner.id and listing.status is True %}
                     <div class="mt-3">
                         <input name="close_listing" type="submit" class="btn btn-warning listing-btn" value="Close Listing">
                     </div>
